--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -68,7 +68,7 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
 
     <p>Appwrite is a secure, open-source backend that abstracts the complexity of common, complex, and repetitive tasks required for building a modern app.</p>
 
-    <p>Appwrite provides you with a set of secure APIs, tools, and a management console UI to help you build your apps quickly without compromising security. Appwrite includes features like user authentication and account management, user preferences, database and file storage, cloud functions, localization, image manipulation, and more.</p>
+    <p>Appwrite provides you with a set of secure APIs, tools, and a management console UI to help you build your apps quickly without compromising security. You can add user authentication and management, data and file storage, run server-side code, image manipulation, localization, and more into your apps with Appwrite.</p>
 
     <p>Appwrite adapts to your unique habits and needs. You can integrate Appwrite directly with your client app or use it alongside your existing backend server, using the language and technologies you're most comfortable with.</p>
 
