--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -110,10 +110,11 @@
 
 <h2><a href="#next-steps" id="next-steps">Next Steps</a></h2>
 <p>Self-hosting Appwrite gives you more configurable options. You can customize Appwrite with your choice of S3 compatible storage adaptors, email and SMS providers, functions runtimes, and more.</p>
-<p><a href="/docs/configuration">Learn about configuring Appwrite</a></p>
+
+<p><a href="/docs/configuration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn about configuring Appwrite</a></p>
 
 <p>Self-hosted Appwrite instances can be made production ready. To run Appwrite successfully in a production environment, you should follow a few basic concepts and best practices.</p>
-<p><a href="/docs/production">Learn about Appwrite in production</a></p>
+<p><a href="/docs/production"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn about Appwrite in production</a></p>
 
 <h2><a href="#manual" id="manual">Manual (using docker-compose.yml)</a></h2>
 
