Fix link open in new tab + fix description for Flutter web

--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -15,7 +15,7 @@ $androidVersion = (isset($versions['android'])) ? $versions['android'] : '';
 ?>
 <p>Appwrite is a development platform that provides a powerful API and management console to get your next project up and running quickly.</p>
 
-<p><a href="https://cloud.appwrite.io/">Create your first project now</a> and start building on Appwrite Cloud.</p>
+<p><a href="https://cloud.appwrite.io/" target="_blank" rel="noopener">Create your first project now</a> and start building on Appwrite Cloud.</p>
 
 <h2><a href="/docs/getting-started-for-android#addProject" id="addProject">Add your Android Platform</a></h2>
 
