--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -61,7 +61,7 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
     
     <div class="notice">
         <h2>Can't wait to get started?</h2>
-        <p><a href="https://cloud.appwrite.io/">Create your first project now</a> and start building on Appwrite Cloud.</p>
+        <p><a target="_blank" rel="noopener" href="https://cloud.appwrite.io/">Create your first project now</a> and start building on Appwrite Cloud.</p>
     </div>
 
     <h2 class="margin-bottom">Overview</h2>
