Use relative links

--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -1,22 +1,22 @@
 <p>Appwrite uses emails and SMS messages to perform user invite, user verification, login, and reset password. Emails and SMS messages can be customized to fit your app's design and voice.</p>
 
-<h2><a href="/docs/email-and-sms-templates#customize" id="customize">Customize Templates</a></h2>
+<h2><a href="#customize" id="customize">Customize Templates</a></h2>
 <p>You can customize email and SMS templates in the Appwrite console.</p>
 <div class="notice">
     <h2>Custom SMTP Server Required</h2>
-    <p>The built-in email service does not support custom email templates. Configure a <a href="/docs/email-and-sms-templates#smtp">custom SMTP server</a> to enable custom email templates.</p>
+    <p>The built-in email service does not support custom email templates. Configure a <a href="#smtp">custom SMTP server</a> to enable custom email templates.</p>
 </div>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>In your project, navigate to <b>Auth</b> > <b>Templates</b>.</li>
     [STEPS AFTER FINALIZED DESIGN]
 </ol>
-<h2><a href="/docs/email-and-sms-templates#email-templates" id="email-templates">Email Templates</a></h2>
+<h2><a href="#email-templates" id="email-templates">Email Templates</a></h2>
+<h2><a href="#smtp" id="smtp">Add a SMTP provider</a></h2>
+<h2><a href="#email-template-syntax" id="email-template-syntax">Email Template Syntax</a></h2>
+<h2><a href="#email-template-components" id="email-template-components">Email Template Components</a></h2>
 
-<h2><a href="/docs/email-and-sms-templates#email-template-syntax" id="email-template-syntax">Email Template Syntax</a></h2>
-<h2><a href="/docs/email-and-sms-templates#email-template-components" id="email-template-components">Email Template Components</a></h2>
 
+<h2><a href="#sms-templates" id="sms-templates">SMS Templates</a></h2>
 
-<h2><a href="/docs/email-and-sms-templates#sms-templates" id="sms-templates">SMS Templates</a></h2>
-
-<h2><a href="/docs/email-and-sms-templates#sms-template-syntax" id="sms-template-syntax">SMS Template Syntax</a></h2>
-<h2><a href="/docs/email-and-sms-templates#sms-template-components" id="sms-template-components">SMS Template Components</a></h2>
+<h2><a href="#sms-template-syntax" id="sms-template-syntax">SMS Template Syntax</a></h2>
+<h2><a href="#sms-template-components" id="sms-template-components">SMS Template Components</a></h2>
