--- a/app/views/docs/offline.phtml
+++ b/app/views/docs/offline.phtml
@@ -52,24 +52,47 @@ When Offline Support is enabled, Appwrite allows you to query and write data by 
   Queries will fetch data from Appwrite and update the cache while the device is online. If the device is not connected to the internet, the query fetches data from the local cache.
 </p>
 
-<img src="/images-ee/docs/offline-read-uml-light.png" alt="UML diagram depicting offline read operations." width="100%" class="force-light" loading="lazy"/>
-<img src="/images-ee/docs/offline-read-uml-dark.png" alt="UML diagram depicting offline read operations." width="100%" class="force-dark" loading="lazy"/>
-
+<?php
+$image = new View(__DIR__.'/../general/image.phtml');
+    echo $image
+        ->setParam('srcLight', '/images-ee/docs/offline-read-uml-light.png')
+        ->setParam('srcDark', '/images-ee/docs/offline-read-uml-dark.png')
+        ->setParam('alt', 'UML diagram depicting offline read operations.')
+        ->setParam('description', 'UML diagram depicting offline read operations.')
+        ->setParam('width', '100%')
+        ->render();
+?>
 
 <h3>Writing Data Offline</h3>
 <p>
   Writes will update the local cache first. If the device is online, the changes will be sent to Appwrite immediately. If the device is not connected to the internet, the operation will be queued and synced to Appwrite when internet is available again.
 </p>
 
-<img src="/images-ee/docs/offline-write-uml-light.png" alt="UML diagram depicting offline write operations." width="100%" class="force-light" loading="lazy"/>
-<img src="/images-ee/docs/offline-write-uml-dark.png" alt="UML diagram depicting offline write operations." width="100%" class="force-dark" loading="lazy"/>
+<?php
+$image = new View(__DIR__.'/../general/image.phtml');
+    echo $image
+        ->setParam('srcLight', '/images-ee/docs/offline-write-uml-light.png')
+        ->setParam('srcDark', '/images-ee/docs/offline-write-uml-dark.png')
+        ->setParam('alt', 'UML diagram depicting offline write operations.')
+        ->setParam('description', 'UML diagram depicting offline write operations.')
+        ->setParam('width', '100%')
+        ->render();
+?>
 
 <h2><a href="#async-operation" id="async-operation">Asynchronous Operation</a></h2>
 <p>
     When Offline Support is enabled, write operations only resolve after the server accepts the request. Requests made with the Client SDK may block code execution until network connection is available again.
 </p>
-<img src="/images-ee/docs/offline-async-uml-light.png" alt="UML diagram depicting offline cache in async operations." width="100%" class="force-light" loading="lazy"/>
-<img src="/images-ee/docs/offline-async-uml-dark.png" alt="UML diagram depicting offline cache in async operations." width="100%" class="force-dark" loading="lazy"/>
+<?php
+$image = new View(__DIR__.'/../general/image.phtml');
+    echo $image
+        ->setParam('srcLight', '/images-ee/docs/offline-async-uml-light.png')
+        ->setParam('srcDark', '/images-ee/docs/offline-async-uml-dark.png')
+        ->setParam('alt', 'UML diagram depicting offline cache in async operations.')
+        ->setParam('description', 'UML diagram depicting offline cache in async operations.')
+        ->setParam('width', '100%')
+        ->render();
+?>
 
 <p>
     You should optimistically update your app's local state after a write operation. Once you're online again, the write will be synced with your Appwrite project, which will be fetched when you app restarts in the future.
