--- a/app/views/general/image.phtml
+++ b/app/views/general/image.phtml
@@ -1,22 +1,13 @@
 <?php
 $srcLight = $this->getParam('srcLight', '');
 $srcDark = $this->getParam('srcDark', $srcLight);
-$description = $this->getParam('description', '');
-$width = $this->getParam('width', '');
+$alt = $this->getParam('alt', 'Screenshot');
 $description = $this->getParam('description', '');
 ?>
 <figure>
     <picture>
-        <img class="force-light" 
-            alt="<?php echo $this->escape($alt); ?>" 
-            src="<?php echo $this->escape($srcLight); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" 
-            width="<?php echo $this->escape($width); ?>"
-            loading="lazy">
-        <img class="force-dark" 
-            alt="<?php echo $this->escape($alt); ?>" 
-            src="<?php echo $this->escape($srcDark); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" 
-            width="<?php echo $this->escape($width); ?>"
-            loading="lazy">
+        <img class="force-light" alt="<?php echo $this->escape($alt); ?>" src="<?php echo $this->escape($srcLight); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" loading="lazy">
+        <img class="force-dark" alt="<?php echo $this->escape($alt); ?>" src="<?php echo $this->escape($srcDark); ?>?v=<?php echo APP_CACHE_BUSTER; ?>" loading="lazy">
     </picture>
     
     <?php if(!empty($description)): ?>
