--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -307,6 +307,11 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
     If there is already an active anonymous session, the new session will be attached to it. If there are no active sessions, the server will attempt to look for an account with the same email address as the email received from the OAuth2 provider and attach the new session to the existing account. If no matching account is found - the server will create a new account.
 </p>
 
+<div class="notice">
+    <h3>Note</h3>
+    <p>While you setup OAuth2 providers, you need to enter App ID and App Secret in your Appwrite console. You need to choose a web application in your respective 3rd party OAuth2 provider (Ex: Google) irrespective of the target platform you are building for. This is beacuse the communication is between Appwrite (Web App) and the OAuth2 provider</p>
+</div>
+
 <h3><a href="/docs/authentication#phone" id="phone">Phone</a></h3>
 
 <p>
