Fix table heading for variables

--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -55,7 +55,7 @@
 <table class="full text-size-small">
     <thead>
     <tr>
-        <td style="width: 200px">Component</td>
+        <td style="width: 200px">Variable</td>
         <td>Description</td>
     </tr>
     </thead>
@@ -70,7 +70,11 @@
     </tr>
     <tr>
         <td><code>{{user}}</code></td>
-        <td>The name of the uer receiving the email.</td>
+        <td>The name of the user receiving the email.</td>
+    </tr>
+    <tr>
+        <td><code>{{redirect}}</code></td>
+        <td>The URL for the user to complete the email template's action.</td>
     </tr>
     </tbody>
 </table>
@@ -99,7 +103,7 @@
 <table class="full text-size-small">
     <thead>
     <tr>
-        <td style="width: 200px">Component</td>
+        <td style="width: 200px">Variable</td>
         <td>Description</td>
     </tr>
     </thead>
