--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -239,7 +239,7 @@ mutation {
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
         <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Account } from "appwrite";
 
-const client = new Client();
+const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your API Endpoint
     .setProject('[PROJECT_ID]');               // Your project ID
 
