Fix reference index, change guide index

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -65,17 +65,7 @@ $cols = [
                     <li><a href="/docs/client/teams<?php echo $this->escape($clientSDK); ?>">Teams</a></li>
                     <li><a href="/docs/client/databases<?php echo $this->escape($clientSDK); ?>">Databases</a></li>
                     <li><a href="/docs/client/storage<?php echo $this->escape($clientSDK); ?>">Storage</a></li>
-                    <li>
-                        <a href="/docs/client/functions<?php echo $this->escape($clientSDK); ?>">Functions</a>
-
-                        <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-deploy" data-selected="/docs/functions-deploy"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deploy</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-execute" data-selected="/docs/functions-execute"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Execute</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-syntax" data-selected="/docs/functions-syntax"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Syntax</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-runtimes" data-selected="/docs/functions-runtimes"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Runtimes</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-debugging" data-selected="/docs/functions-debugging"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Logging and Debugging</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="/docs/client/functions<?php echo $this->escape($clientSDK); ?>">Functions</a></li>
                     <li><a href="/docs/client/locale<?php echo $this->escape($clientSDK); ?>">Localization</a></li>
                     <li><a href="/docs/client/avatars<?php echo $this->escape($clientSDK); ?>">Avatars</a></li>
                     <li><a href="/docs/server/health<?php echo $this->escape($serverSDK); ?>">Health</a></li>
@@ -102,7 +92,17 @@ $cols = [
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-security" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Security</a></li>                                                
                         </ul>
                     </li>
-                    <li><a href="/docs/functions">Functions</a></li>
+                    <li>
+                        <a href="/docs/functions>Functions</a>
+
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-deploy" data-selected="/docs/functions-deploy"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deploy</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-execute" data-selected="/docs/functions-execute"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Execute</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-syntax" data-selected="/docs/functions-syntax"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Syntax</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-runtimes" data-selected="/docs/functions-runtimes"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Runtimes</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-debugging" data-selected="/docs/functions-debugging"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Logging and Debugging</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <div class="margin-bottom-small">
