IDs can't be wildcards

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -493,9 +493,7 @@ subscription.close()</code></pre>
 
 <h2><a href="/docs/realtime#channels" id="channels">Channels</a></h2>
 
-<p>
-    You can subscribe to changes in a specific area of Appwrite by subscribing to channels. You can subscribe to specific resources by replacing <code>[ID]</code> with the desired resource's ID or subscribe to all resources of the same type with the wildcard character <code>*</code>.
-</p>
+<p>A list of all channels available you can subscribe to. IDs cannot be wildcards.</p>
 
 <table class="full text-size-small">
     <thead>
