--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -882,6 +882,7 @@
                 <td>Places the cursor before the specified resource ID. Used for <a href="/docs/pagination#cursor-pagination" id="cursor-pagination">pagination</a>.</td>
             </tr>
         </tbody>
+        </table>
     </li>
     <li>
         <h3>Deno</h3>
